This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt


Release 0.3.4
=============
- Update R readme
- Add severity check for model validity (used before kriging)
- Standardize graphics in R and Python
- Rename name1 and name2 into namex and namey for correlation representations

Release 0.3.3
=============
- Fix Issues 76 & 77
- Update official website URL
- Improve SPDE class API

Release 0.3.2
=============
- Add How to cite in READMEs
- Add publish demos and publish doxygen workflows

Release 0.3.1
=============
- SWIG typemaps robustification
- Publish acknowledge_gstlearn 

Release 0.3.0
=============
- Modify the angles in the legend of vario and model (from 'codir' to 'angles') + 1 angle if in 2D.
- Change the display of angles: it now lies between 0 and 360.
- New method to create several variogram directions specified by the list of their angles (limited to 2D)
- adding the possibility to define a DirParam using a 2D angle (prevails definition by 'codir')
- changing prototypes of setMean() and setVars()
- Fix Cross-validation in Simple Kriging with non zero Mean in Unique Neighborhood
- Changing ENUM EKrigOpt: option PONCTUAL becomes POINT
- Changing the internal definition (and storage) of DirParam
- Generalize the methode createFromVVD() for all concrete matrices

Release 0.2.0
=============
- APP source code deposit
- Transfer External Tools to gstlearnext
- Fix Anamorphosis back transformation (Hermite gaussianToRaw)
- Modify eval() and eval0() for Cov* functions: invert argument order
- Correct when changing the number of variables in an existing CovContext
- Modification of the names of the getDriftXXX functions
- Correction for Variance of Measurement error in Kriging and covMatrix functions
- Reorganization of the Class diagram for AMatrix
- Adding method "reduce" to AMatrix (and related classes) and to Model, ACovAnisoList and CovAniso