@@ -9,6 +9,7 @@ Release 0.3.4
 - Add severity check for model validity (used before kriging)
 - Standardize graphics in R and Python
 - Rename name1 and name2 into namex and namey for correlation representations
+- Parametrize the amount of Nugget (technically) added in SPDE
 
 Release 0.3.3
 =============
